--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,8 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:4.0.0'
     compile 'com.android.support:support-v4:25.3.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0'
+    compile("com.github.bumptech.glide:recyclerview-integration:4.0.0") {
+        // Excludes the support library because it's already included by Glide.
+        transitive = false
+    }
 }
